// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal renders ConfirmationModal unchanged 1`] = `<div />`;

exports[`Contact renders Contact unchanged 1`] = `
<div>
  <div
    class="p-1 mx-2 my-1 border-gray-400 border-2 rounded flex bg-slate-50 hover:bg-slate-100"
  >
    <div
      class="flex shrink-0 items-center m-1 lg:m-4"
    >
      <img
        alt="mock avatar"
        class="rounded-full w-16 h-16 lg:w-32 lg:h-32"
        src="https://i.pravatar.cc/300"
      />
    </div>
    <div
      class="flex flex-col grow m-1 pr-1 lg:m-4"
    >
      <div
        class="flex items-center"
      >
        <div
          class="text-sm font-bold mr-2 lg:text-xl"
        >
          Alex
           
          Wang
           
        </div>
        |
        <div
          class="text-sm ml-2 lg:text-xl"
        >
          PM
        </div>
      </div>
      <div
        class="text-xs lg:text-sm"
      >
        this is description
      </div>
    </div>
    <div
      class="flex shrink-0 items-center"
    >
      <a
        class="right-3"
        data-testid="contact-edit-link"
        href="/contact/edit/1"
      >
        <img
          alt="Edit"
          class="w-6 h-6 m-2 lg:w-9 lg:h-9 lg:m-4"
          data-nimg="1"
          data-testid="contact-edit-button"
          decoding="async"
          height="40"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
          style="color: transparent;"
          width="40"
        />
      </a>
      <div>
        <img
          alt="Delete"
          class="w-6 h-6 m-2 lg:w-9 lg:h-9 lg:m-4 cursor-pointer"
          data-nimg="1"
          data-testid="contact-delete-button"
          decoding="async"
          height="40"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
          style="color: transparent;"
          width="40"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Contacts renders Contacts unchanged 1`] = `
<div>
  <div>
    Failed to load
  </div>
</div>
`;

exports[`Header renders Header unchanged 1`] = `
<div>
  <div
    class="text-center py-4 bg-yellow-400  md:text-start md:pl-5"
  >
    <a
      data-testid="header-link"
      href="/contact"
    >
      <div
        class="text-slate-50 text-xl font-black w-fit inline-block md:block"
        id="header"
      >
        Contact List
      </div>
    </a>
  </div>
</div>
`;

exports[`Home renders homepage unchanged 1`] = `
<div>
  <main>
    <div>
      <div>
        Failed to load
      </div>
    </div>
  </main>
</div>
`;
